backend/cloud/deploy/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dkcs-prod
  labels:
    app.kubernetes.io/name: dkcs
    app.kubernetes.io/part-of: digital-key
    environment: production
